virtualservice-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: soap-service-vs
  namespace: default
spec:
  hosts:
    - soap-service
  http:
    - route:
        - destination:
            host: soap-service
            port:
              number: 80
      retries:
        attempts: 2
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream
